--- a/dataScene.html
+++ b/dataScene.html
@@ -43,7 +43,7 @@
 
 <body id="body" style="background-image: linear-gradient(180deg, rgb(84,88,90), rgb(0,0,0));"> <!--Scene Background-->
 	<div id="loader-wrapper">
-		<div class="loadinglogo"><img src="/img/Moon_Logo.png" class="logo" /></div>
+		<div class="loadinglogo"><img src="./img/Moon_Logo.png" class="logo" /></div>
 		<div id="loader"></div>
 		<div class="loader-section section-left"></div>
 		<div class="loader-section section-right"></div>
@@ -55,8 +55,8 @@
 
 
 	<div>
-		<button id="VTSceneBtn" class="sceneBtn" onclick="window.location.href='/virtualTourMap.html'">
-			<img src="img/virtualTour.png" />
+		<button id="VTSceneBtn" class="sceneBtn" onclick="window.location.href='./virtualTourMap.html'">
+			<img src="./img/virtualTour.png" />
 			<b>Virtual Tour</b>
 		</button>
 	</div>
