--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		* { margin: 0; padding: 0; }
 		
 		html { 
-			background: url("img/index-background.jpg") no-repeat center center fixed; 
+			background: url("./img/index-background.jpg") no-repeat center center fixed; 
 			-webkit-background-size: cover;
 			-moz-background-size: cover;
 			-o-background-size: cover;
@@ -20,7 +20,7 @@
 <body>
 
 	<div>
-		<img src="img/Moon_Logo.png" 
+		<img src="./img/Moon_Logo.png" 
 				style="	width: 7vw;
 						margin-top: 10px;
 						margin-left: 10px;"/>
@@ -28,11 +28,11 @@
 
 	<div id="landingTitle">
 
-		<span>ROSH PINAH MINE - </span>
+		<span>INTERACTIVE SOLUTION - </span>
 
 		<span style="
 				color: rgb(208,211,212);
-  				-webkit-text-stroke-color: black;">NAMIBIA</span>
+  				-webkit-text-stroke-color: black;">DEMO</span>
 	</div>
 
 	<div>
