--- a/virtualTourMap.html
+++ b/virtualTourMap.html
@@ -37,7 +37,7 @@
 
 <body>
 	<div id="loader-wrapper">
-		<div class="loadinglogo"><img src="/img/Moon_Logo.png" class="logo" /></div>
+		<div class="loadinglogo"><img src="./img/Moon_Logo.png" class="logo" /></div>
 		<div id="loader"></div>
 		<div class="loader-section section-left"></div>
 		<div class="loader-section section-right"></div>
@@ -48,8 +48,8 @@
 	</div>
 
 	<div>
-		<button id="dataSceneBtn" class="sceneBtn" onclick="window.location.href='/dataScene.html'">
-			<img src="img/data.png" />
+		<button id="dataSceneBtn" class="sceneBtn" onclick="window.location.href='./dataScene.html'">
+			<img src="./img/data.png" />
 			<b>Data Viewer</b>
 		</button>
 	</div>
@@ -57,8 +57,8 @@
 	<!-- ============= SIDEBAR ================================================================== -->
 	<div class="header">
 		<a href="javascript:void(0)" id="sideNavToggle">
-			<img class="icon off" src="img/expand.png">
-			<img class="icon on" src="img/collapse.png">
+			<img class="icon off" src="./img/expand.png">
+			<img class="icon on" src="./img/collapse.png">
 		</a>
 		<div class="title"><b>Rosh Pinah</b><br> Virtual Tour</div>
 	</div>
